--- a/docker/php-cli/Dockerfile
+++ b/docker/php-cli/Dockerfile
@@ -1,10 +1,12 @@
 FROM php:8.1-cli-alpine
-ENV XDEBUG_VERSION 3.1.2
+ENV XDEBUG_VERSION 3.2.0
 
-RUN apk add bash coreutils git \
-    && git clone --branch $XDEBUG_VERSION --depth 1 https://github.com/xdebug/xdebug.git /usr/src/php/ext/xdebug \
+RUN apk add --update linux-headers
+RUN apk add bash coreutils git
+RUN docker-php-ext-install mysqli pdo pdo_mysql
+RUN git clone --branch $XDEBUG_VERSION --depth 1 https://github.com/xdebug/xdebug.git /usr/src/php/ext/xdebug \
     && docker-php-ext-configure xdebug --enable-xdebug-dev \
-    && docker-php-ext-install mysqli pdo pdo_mysql xdebug
+    && docker-php-ext-install xdebug
 
 RUN apk add --no-cache unzip
 
